--- a/biblio.bib
+++ b/biblio.bib
@@ -1,6 +1,92 @@
 
 
 
+
+
+@article{raimbault2018indirect,
+  title={Indirect evidence of network effects in a system of cities},
+  author={Raimbault, Juste},
+  journal={Environment and Planning B: Urban Analytics and City Science},
+  pages={2399808318774335},
+  year={2018},
+  publisher={SAGE Publications Sage UK: London, England}
+}
+
+@phdthesis{cottineau2014evolution,
+  title={L'{\'e}volution des villes dans l'espace post-sovi{\'e}tique. Observation et mod{\'e}lisations.},
+  author={Cottineau, Clementine},
+  year={2014}
+}
+
+
+@article{cottineau2017diverse,
+  title={Diverse cities or the systematic paradox of urban scaling laws},
+  author={Cottineau, Cl{\'e}mentine and Hatna, Erez and Arcaute, Elsa and Batty, Michael},
+  journal={Computers, environment and urban systems},
+  volume={63},
+  pages={80--94},
+  year={2017},
+  publisher={Elsevier}
+}
+
+@article{favaro2011gibrat,
+  title={Gibrat Revisited: An Urban Growth Model Incorporating Spatial Interaction and Innovation Cycles.},
+  author={Favaro, Jean-Marc and Pumain, Denise},
+  journal={Geographical Analysis},
+  volume={43},
+  number={3},
+  pages={261--286},
+  year={2011},
+  publisher={Wiley Online Library}
+}
+
+
+@article{decker2007global,
+  title={Global patterns of city size distributions and their fundamental drivers},
+  author={Decker, Ethan H and Kerkhoff, Andrew J and Moses, Melanie E},
+  journal={PLoS One},
+  volume={2},
+  number={9},
+  pages={e934},
+  year={2007},
+  publisher={Public Library of Science}
+}
+
+
+@article{eeckhout2004gibrat,
+  title={Gibrat's law for (all) cities},
+  author={Eeckhout, Jan},
+  journal={American Economic Review},
+  volume={94},
+  number={5},
+  pages={1429--1451},
+  year={2004}
+}
+
+
+@book{pumain1982dynamique,
+  title={La dynamique des villes},
+  author={Pumain, Denise},
+  year={1982},
+  publisher={Economica}
+}
+
+@article{robson1973urban,
+  title={Urban Growth: an approach, Methuen \& Co},
+  author={Robson, BT},
+  journal={Ltd., London},
+  year={1973}
+}
+
+
+@article{gibrat1931inegalits,
+  title={Les in{\'e}galit{\'e}s {\'e}conomiques},
+  author={Gibrat, Robert},
+  journal={Sirey},
+  year={1931}
+}
+
+
 @article{pumain2015multilevel,
   title={Multilevel comparison of large urban systems},
   author={Pumain, Denise and Swerts, Elfie and Cottineau, Cl{\'e}mentine and Vacchiani-Marcuzzo, C{\'e}line and Ignazzi, Cosmo Antonio and Bretagnolle, Anne and Delisle, Fran{\c{c}}ois and Cura, Robin and Lizzi, Liliane and Baffi, Sol{\`e}ne},
