--- a/main.tex
+++ b/main.tex
@@ -3,7 +3,7 @@
 \begin{document}
 
 \title{An evolutionary theory for the spatial dynamics of urban systems worldwide}
-\author{J.~Raimbault$^{1,2,3\ast}$, D.Pumain$^3$ and E. Denis$^3$\\
+\author{J.~Raimbault$^{1,2,3\ast}$, E. Denis$^3$ and D.Pumain$^3$\\
 \texttt{j.raimbault@ucl.ac.uk}
 }
 
@@ -15,6 +15,7 @@ $^{3}$UMR CNRS 8504 G{\'e}ographie-cit{\'e}s
 
 
 \date{ECTQG 2019\\
+Co-evolution of cities and networks\\
 September 8th 2019
 }
 
@@ -36,20 +37,132 @@ September 8th 2019
 
 
 
+\sframe{How to explain urban growth?}{
+
+\begin{itemize}
+	\item Apparent direct \textbf{causes} : intentions/actions from urban actors (policies, locational strategies from firms, residential migrations \ldots)
+	\item But \textbf{statistical observation} (thousands of cities, over centuries) : each city has a probability of growing similar to other cities belonging to the same territorial system	
+\end{itemize}
+
+\medskip
+$\rightarrow$ ``distributed growth'' on the long run with many local and temporal fluctuations
+
+}
+
+
+\sframe{Gibrat's model}{
+
+``Proportional'' growth = growth rates are equiprobable for any city size and not correlated with previous rate
+
+\medskip
+
+Good fit $\rightarrow$ double explanatory gain: 
+
+\begin{itemize}
+	\item Persistancy of urban spatial patterns and hierarchies
+	\item The statistical shape of urban sizes distribution (Zipf’s law or lognormal $\simeq$ H. Simon $\neq$ P. Krugman) as generated from growth process
+\end{itemize}
+
+\cite{gibrat1931inegalits} \cite{robson1973urban} \cite{pumain1982dynamique}
+
+
+}
+
+
+%\sframe{Gibrat’s model}{
+%
+%\textit{A satisfying proxy but some empirical contradiction}
+%
+%\bigskip
+%
+%\begin{enumerate}
+%\item The observed distributions of city sizes (actually: settlement sizes including hamlets, villages, towns and SMAs) are lognormal (evidence from \cite{robson1973urban}, \cite{pumain1982dynamique}, \cite{eeckhout2004gibrat}, \cite{decker2007global})
+%\item Gibrat’s growth model leads to a lognormal distribution of city sizes
+%\item but Gibrat’s growth model hypothesis are rejected (correlation between growth rates and city size, correlation between successive growth rates)
+%\end{enumerate}
+%
+%}
+%
+%\sframe{Evolutionary urban theory}{
+%
+%\textit{Innovation diffusion and spatial integration of urban systems}
+%
+%\bigskip
+%
+%\begin{itemize}
+%\item In new urban systems, as in USA, there is a spatial filling process that occur through waves of urban growth (urban Frontier) corresponding to the diffusion of economic cycles
+%\item In mature urban systems, like in France, the innovations diffusion reaches cities that are not spatially regularly arranged but already experienced other growth periods according to distinct cycles of urban specialisation
+%\end{itemize}
+%
+%}
+%
+%
+%\sframe{Evolutionary urban theory and scaling laws}{
+%
+%\textit{Linking scaling laws to a geographical model of urban growth with spatial interaction and innovation cycles}
+%
+%\bigskip
+%
+%\begin{itemize}
+%\item We suggest to replace a generic statistical model of growing independent entities (Gibrat’s urban growth model) by a model of spatially and temporally interdependent entities (i.e. the geographical concept of ``system of cities'' or ``settlement system'')
+%\item It reproduces the observations on differential scaling parameters for urban activities according to their age in innovation cycles \cite{favaro2011gibrat}
+%\item It also makes explicit the multilevel dynamics of interurban competition for capturing innovation, which may itself generate new innovation through interurban emulation, within an evolutionary perspective
+%\end{itemize}
+%
+%}
+
+
+\sframe{Testing the evolutionary urban theory}{
+
+\textit{How are stylized facts on systems of cities robust and general ?}
+
+\medskip
+
+$\rightarrow$ empirical study with the new Global Human Settlement layer dataset
+
+\bigskip
+\bigskip
+
+\textit{How can dynamical models of urban systems be applied in the context of the evolutionary urban theory ?}
+
+\medskip
+
+$\rightarrow$ test of six dynamical models, based on geographical interactions between cities but different dimensions, on different systems of cities and worlwide
+
+
+}
+
+
+\sframe{A new source of data on global urbanization}{
+
+\begin{itemize}
+	\item GHSL (Global Human Settlement Layer) : GEO Human Planet Initiative (European Commission)
+	\item Built up area from satellite images 40 m + population data 250 m $\rightarrow$ 1 km2 grid
+	\item 13 000 urban areas > 50 000 inhab.
+	\item Surface, population in 1975, 1990, 2000, 2015
+	\item GDP, Green surfaces, Pollutants 1990-2015
+\end{itemize}
+
+}
+
+
+
 % number of areas per country
 % summary(countrycount$count)
 %   Min. 1st Qu.  Median    Mean 3rd Qu.    Max. 
 %   1.00    4.00   13.00   72.17   48.75 3248.00 
 
 
-
-\sframe{Population distributions}{
-
-\begin{center}
-    \includegraphics[width=0.8\textwidth]{figures/population_distributions.png}
-\end{center}
-
-}
+%
+%\sframe{Population distributions}{
+%
+%\begin{center}
+%    \includegraphics[width=0.7\textwidth]{figures/population_distributions.png}
+%\end{center}
+%
+%\textit{Temporal stability of the shape of global population distribution}
+%
+%}
 
 
 \sframe{Urban systems summary}{
@@ -59,23 +172,47 @@ September 8th 2019
     
     % summary - 2015 - geodivercity urban systems
 
-    \textit{Summary statistics in 2015 for urban systems studied in \cite{pumain2015multilevel}}
+    \textit{Summary statistics in 2015 for urban systems \cite{pumain2015multilevel}}
     
-    \medskip
+    \smallskip
     
+%    {\tiny
+%    \begin{center}
+%    \begin{tabular}{|c|c|c|c|c|c|}
+%    \hline
+%        System & Population & Cities & Primacy & Rank-size & R2  \\\hline
+%         Europe & 188Mio & 693 & 1.01 & $0.94 \pm 0.0026$ & 0.994  \\
+%         China & 567.2Mio & 1850 & 1.66 & $0.91 \pm 0.0011$ & 0.997  \\
+%         Brazil & 111.7Mio & 349 & 1.95 & $0.99 \pm 0.0026$ & 0.998  \\
+%         India & 703.1Mio & 3248 & 1.22 & $0.78 \pm 0.0009$ & 0.996  \\
+%         South Africa & 25.3Mio & 77 & 1.85 & $1.05 \pm 0.020$ & 0.974  \\
+%         US & 153Mio & 324 & 1.12 & $1.16 \pm 0.0054$ & 0.992  \\
+%         FSU & 120.3Mio & 450 & 3.27 & $0.92 \pm 0.0062$ & 0.979  \\\hline
+%    \end{tabular}
+%    \end{center}
+%    }
+{%\tiny
     \begin{center}
     \begin{tabular}{|c|c|c|c|c|c|}
     \hline
-        System & Population & Cities & Primacy & Rank-size & R2  \\\hline
-         Europe & 188Mio & 693 & 1.01 & $0.94 \pm 0.0026$ & 0.994  \\
-         China & 567.2Mio & 1850 & 1.66 & $0.91 \pm 0.0011$ & 0.997  \\
-         Brazil & 111.7Mio & 349 & 1.95 & $0.99 \pm 0.0026$ & 0.998  \\
-         India & 703.1Mio & 3248 & 1.22 & $0.78 \pm 0.0009$ & 0.996  \\
-         South Africa & 25.3Mio & 77 & 1.85 & $1.05 \pm 0.020$ & 0.974  \\
-         US & 153Mio & 324 & 1.12 & $1.16 \pm 0.0054$ & 0.992  \\
-         FSU & 120.3Mio & 450 & 3.27 & $0.92 \pm 0.0062$ & 0.979  \\\hline
+        System & Pop (M) & Pop geodiv. & Cities & Rank-size  \\\hline
+         Europe & 188 & 291 & 693 & $0.94$  \\
+         China & 567 & 481 & 1850 & $0.91$  \\
+         Brazil & 112 & 161 & 349 & $0.99$  \\
+         India & 703 & 427 & 3248 & $0.78$  \\
+         South Africa & 25 & 25 & 77 & $1.05$ \\
+         US & 153 & 324 & 287 & $1.16$  \\
+         FSU & 120 & 174 & 450 & $0.92$ \\\hline
     \end{tabular}
     \end{center}
+    }
+    
+    %\smallskip
+
+	%\begin{center}
+%		\includegraphics[height=0.4\textheight]{figures/geodivercity-summary.png}
+%	\end{center}
+
 
 }
 
@@ -90,11 +227,29 @@ Reproducing results of \cite{pumain2015multilevel} for large urban systems
 % Brazil, China, US, Europe, South Africa, URSS, India
 
 \begin{center}
-    \includegraphics[height=0.8\textheight,width=0.8\textwidth]{figures/RankSize_Europe-China-Brazil-India-SouthAfrica-UnitedStates-FormerSovietUnion_years-90-00-15.png}
+    \includegraphics[width=0.53\textwidth,height=0.5\textheight]{figures/RankSize_Europe-China-Brazil-India-SouthAfrica-UnitedStates-FormerSovietUnion_years-90-00-15.png}
+    \includegraphics[width=0.45\textwidth]{figures/geodivercity-ranksize.png}
 \end{center}
 
+\medskip
+
+$\rightarrow$ \textbf{Robustness of qualitative stylized facts to the database}
 
 }
+
+\sframe{Rank-size by continents or trade areas}{
+
+\begin{center}
+    \includegraphics[width=0.48\textwidth]{figures/RankSize_Europe-America-Asia-Africa-Oceania_years-90-00-15.png}
+    \includegraphics[width=0.48\textwidth]{figures/RankSize_ASEAN-MERCOSUR-COMESA-EEA_years-90-00-15.png}
+\end{center}
+
+\medskip
+
+$\rightarrow$ \textbf{Possibility to extend analysis to other consistent geographical ensembles}
+
+}
+
 
 
 \sframe{Correlations between urban indicators}{
@@ -102,51 +257,92 @@ Reproducing results of \cite{pumain2015multilevel} for large urban systems
 % includes test of gibrat law : correlation pops / growth rates
 
 \begin{center}
-    \includegraphics[width=0.46\textwidth]{figures/correlations_00.png}\hspace{0.2cm}
-    \includegraphics[width=0.46\textwidth]{figures/correlations_15.png}
+    %\includegraphics[width=0.46\textwidth]{figures/correlations_00.png}\hspace{0.2cm}
+    \includegraphics[width=0.7\textwidth]{figures/correlations_15.png}
 \end{center}
 
+%\medskip
+
+%$\rightarrow$ no apparent deviation to Gibrat's law with this dataset (importance of definition of cities in scaling laws \cite{cottineau2017diverse})
 
 
 }
 
-\sframe{Scaling laws}{
 
-Generalizing existing studies
+\sframe{Linking urban growth and built-up area growth}{
 
 \begin{center}
-    \includegraphics[width=0.32\textwidth]{figures/Built-fitted_Europe-China-Brazil-India-SouthAfrica-UnitedStates-FormerSovietUnion_years-90-00-15.png}
-    \includegraphics[width=0.32\textwidth]{figures/GDP-fitted_Europe-China-Brazil-India-SouthAfrica-UnitedStates-FormerSovietUnion_years-90-00-15.png}
-    \includegraphics[width=0.32\textwidth]{figures/Emissions-fitted_Europe-China-Brazil-India-SouthAfrica-UnitedStates-FormerSovietUnion_years-90-00-15.png}
+\includegraphics[width=0.9\textwidth]{figures/residuals-popbuiltup.png}
 \end{center}
 
+\medskip
+
+\textit{Geographical structure in the relation between population growth and built-up area growth}
+
 }
+
+%
+%\sframe{Scaling laws}{
+%
+%%reproduction / Generalizing existing studies
+%
+%\begin{center}
+%%    \includegraphics[width=0.32\textwidth]{figures/Built-fitted_Europe-China-Brazil-India-SouthAfrica-UnitedStates-FormerSovietUnion_years-90-00-15.png}
+%    \includegraphics[width=0.48\textwidth]{figures/GDP-fitted_Europe-China-Brazil-India-SouthAfrica-UnitedStates-FormerSovietUnion_years-90-00-15.png}
+%    \includegraphics[width=0.48\textwidth]{figures/Emissions-fitted_Europe-China-Brazil-India-SouthAfrica-UnitedStates-FormerSovietUnion_years-90-00-15.png}
+%\end{center}
+%
+%}
 
 \sframe{Evolution of scaling exponents}{
 
 % evolution of scaling exponents in time
 
-\textit{All indicators are stable in their confidence range}
+
+
+
+
+\begin{center}
+    %\includegraphics[width=0.32\textwidth,height=0.45\textheight]{figures/Built-evolution_Europe-China-Brazil-India-SouthAfrica-UnitedStates-FormerSovietUnion_years-90-00-15.png}
+    \includegraphics[width=0.48\textwidth,height=0.45\textheight]{figures/Emissions-evolution_Europe-China-Brazil-India-SouthAfrica-UnitedStates-FormerSovietUnion_years-90-00-15.png}
+    \includegraphics[width=0.48\textwidth,height=0.45\textheight]{figures/GDP-evolution_Europe-China-Brazil-India-SouthAfrica-UnitedStates-FormerSovietUnion_years-90-00-15.png}
+\end{center}
 
 \medskip
 
-\begin{center}
-    \includegraphics[width=0.32\textwidth,height=0.45\textheight]{figures/Built-evolution_Europe-China-Brazil-India-SouthAfrica-UnitedStates-FormerSovietUnion_years-90-00-15.png}
-    \includegraphics[width=0.32\textwidth,height=0.45\textheight]{figures/Emissions-evolution_Europe-China-Brazil-India-SouthAfrica-UnitedStates-FormerSovietUnion_years-90-00-15.png}
-    \includegraphics[width=0.32\textwidth,height=0.45\textheight]{figures/GDP-evolution_Europe-China-Brazil-India-SouthAfrica-UnitedStates-FormerSovietUnion_years-90-00-15.png}
-\end{center}
+\textit{All indicators are stable in their confidence range}
 
 }
 
 
 \sframe{Summary of scaling exponents}{
 
+
+\begin{center}
+\small
+    \begin{tabular}{|c|c|c|c|c|c|}
+    \hline
+    System & Built-up area & GDP & Emissions \\\hline
+Europe & $0.93 \pm 0.016$ (0.83) & $1.15 \pm 0.019$ (0.83) & $1.50 \pm 0.038$ (0.69) \\
+China & $1.06 \pm 0.019$ (0.62)  & $1.14 \pm 0.011$ (0.85)  & $1.84 \pm 0.037$ (0.57) \\
+Brazil & $0.98 \pm 0.025$ (0.81)  & $1.10 \pm 0.055 $ (0.54) & $1.71 \pm 0.053$ (0.75) \\
+India & $1.34 \pm 0.031$ (0.36) & $1.25 \pm 0.022$ (0.50) & $1.54 \pm 0.031$ (0.42) \\
+S. Africa & $1.18 \pm 0.090$ (0.69) & $1.08 \pm 0.028$ (0.95) & $1.56 \pm 0.087$  (0.81) \\
+US & $0.97 \pm 0.015$ (0.92) & $1.04 \pm 0.069$ (0.99) &$ 1.34 \pm 0.03$ (0.84) \\
+FSU & $0.97 \pm 0.035$ (0.63) & $1.17 \pm 0.041$ (0.65) & $1.95 \pm 0.088$ (0.52)\\\hline
+\end{tabular}
+\end{center}
+
+\bigskip
+
+$\rightarrow$ more general, more or less consistent study of scaling (``basic'' indicators but on consistent and global geographical areas)
+% vs shitty on number of cinemas etc - we do not really care.
+
 }
 
 
 
-
-\sframe{Fitting scaling laws}{
+%\sframe{Fitting scaling laws}{
 
 % \cite{finance2018absent}
 % \cite{clauset2009power}
@@ -156,26 +352,407 @@ Generalizing existing studies
 
 % summary table of Goodness of fit for - classical scaling, with cutoff, as piecewise linear
 
-\textit{Alternative models for better fit of scaling laws}
+%\textit{Alternative models for better fit of scaling laws}
 
+% TODO test alternative scaling models ?
 
-}
+%}
 
 
 \sframe{Dynamical models of urban growth}{
 
+\textit{Testing interaction-based dynamical models for urban growth}
+
+\bigskip
+
+\begin{itemize}
+	\item The Favaro-Pumain model for the diffusion of innovation \cite{favaro2011gibrat}
+	\item The Marius model family based on economic exchanges \cite{cottineau2014evolution}
+	\item An interaction model including physical transportation networks \cite{raimbault2018indirect}
+\end{itemize}
+
+
 }
 
+
+\sframe{Calibration of dynamical models on regional systems}{
+
+\includegraphics[width=\textwidth]{figures/allmodels_allsystems.png}
+
+}
+
+
+\sframe{Indian urban system: direct interactions}{
+
+% systems on which the behavior is particularly interesting ?
+
+\centering\includegraphics[width=0.9\textwidth]{figures/IN_zoomed.png}
+
+}
+
+
+\sframe{Brazilian urban system: multiple factors}{
+
+\centering\includegraphics[width=0.9\textwidth,height=0.8\textheight]{figures/BR_zoomed.png}
+
+\footnotesize
+\textit{Importance of topography; innovation processes mostly.}
+
+}
+
+\sframe{China: similar models}{
+
+\centering\includegraphics[width=0.9\textwidth,height=0.8\textheight]{figures/CN_zoomed.png}
+
+\footnotesize
+\textit{No clear best model: other processes in play ? (strong top-down planning)}
+
+}
+
+
+
+\sframe{Worldwide calibration of models}{
+
+% new results with the worldwide run
+
+\centering
+
+\includegraphics[height=0.9\textheight]{figures/allmodels_world.png}
+
+}
 
 
 
 \sframe{Discussion}{
 
-% Open questions :
-%  - urban scaling and dynamics
-%  - endogenous areas for scaling and dynamical models ? 
+
+% - robustesse des faits stylises / des conclusions theoriques 
+% - complementarite
+% - historique/politique - dependance au chemin ! pas inertie - adaptation aux contextes changeants - renforcement des hierarchies - temps tres long
+
+
+\textbf{Synthesis}
+
+$\rightarrow$ robustness of stylized facts, and of theoretical constructions
+
+$\rightarrow$ complementarity of processes and models
+
+$\rightarrow$ importance of the historical/political/geographical context, path-dependency
+
+
+\medskip
+
+\textbf{Open questions:}
+
+$\rightarrow$ linking urban scaling and dynamical models
+
+$\rightarrow$ endogenous consistent urban systems
+
+$\rightarrow$ multiscale models
+
+% applicable knowledge
+
+\medskip
+
+\textbf{Applications}
+
+$\rightarrow$ Statistical predictability of city growth and size on short time periods
+
+$\rightarrow$ Largest metropolises are not ``monstruopolises''
+
+$\rightarrow$ Transfer to practitioners: proactive adaptive strategies are necessary (imitation, or anticipation and risk), emulation (co-opetition)
+
+$\rightarrow$ Robustness, variation and sustainability of urban systems (neither norm nor optimum)
 
 }
+
+
+
+\sframe{Conclusion}{
+
+
+\justify
+
+\vspace{-1cm}
+
+$\rightarrow$ Robustness of results regarding data sources, multiple models. \textbf{Need for more systematic model exploration and sensitivity analysis.}
+
+\smallskip
+
+$\rightarrow$ Model complementarity. \textbf{Need for more integrated models.}
+
+\smallskip
+
+$\rightarrow$ Multiple perspectives on urban systems? \textbf{Need for more interdisciplinarity.}
+
+\bigskip
+\bigskip
+
+%\footnotesize
+
+
+\smallskip
+
+\textbf{Open repository} at
+
+\texttt{https://github.com/JusteRaimbault/UrbanGrowth}
+
+\bigskip
+
+\textbf{Acknowledgments}: thanks to the \textit{European Grid Infrastructure} for access to the infrastructure.
+
+
+}
+
+
+
+
+
+
+\sframe{Reserve slides}{
+
+\centering
+
+\Large
+
+\textbf{Reserve Slides}
+
+}
+
+
+
+
+\sframe{Rank-size by continents or trade areas}{
+
+ \begin{center}
+    \begin{tabular}{|c|c|c|c|c|c|}
+    \hline
+    System & Population & Cities & Primacy & Rank-size & R2  \\\hline
+Europe & 288Mio & 1067 & 1.45 & $0.93 \pm 0.003$  & 0.991 \\
+America & 547Mio & 1521 & 1.02 & $1.02 \pm 0.002$ & 0.996 \\
+Asia & 2143Mio & 7737 & 1.12 & $ 0.87 \pm 0.0004$ & 0.998 \\
+Africa & 585Mio & 2876 & 1.70 & $0.78 \pm 0.0008$ & 0.997 \\
+Oceania & 19Mio & 86 & 1.08 & $0.91 \pm 0.027$ & 0.926\\\hline
+\end{tabular}
+    \end{center}
+    
+    \medskip
+    
+    \begin{center}
+    \begin{tabular}{|c|c|c|c|c|c|}
+    \hline
+    System & Population & Cities & Primacy & Rank-size & R2  \\\hline
+ASEAN & 293Mio & 874 & 1.67 & $0.92 \pm 0.003$ & 0.993 \\
+MERCOSUR & 220Mio & 657 & 1.37 & $1.00 \pm 0.0016$ & 0.998 \\
+COMESA & 252Mio & 1367 & 3.39 & $0.72 \pm 0.0014$ & 0.995 \\
+EEA & 194Mio & 720 & 1.01 & $0.94 \pm 0.0026$ & 0.994 \\ \hline
+\end{tabular}
+    \end{center}
+
+\medskip
+
+$\rightarrow$ similar qualitative patterns, but different thematic questions can be tackled
+
+}
+
+
+
+
+
+\sframe{Scaling by continents or trade areas}{
+
+\footnotesize
+
+\begin{center}
+    \begin{tabular}{|c|c|c|c|c|c|}
+    \hline
+    System & Built-up area & GDP & Emissions \\\hline
+Europe & $0.93 \pm 0.016$ (0.76) & $1.12 \pm 0.024$ (0.67) & $1.58 \pm 0.039$ (0.61) \\
+America & $1.11 \pm 0.030$ (0.48) & $1.23 \pm 0.027$ (0.57) & $1.69 \pm 0.041$  (0.53) \\
+Asia & $1.32 \pm 0.022$ (0.32) & $1.30 \pm 0.016$ (0.47) & $1.78 \pm 0.024$ (0.42) \\
+Africa & $1.57 \pm 0.049$ (0.26) & $1.45 \pm 0.043$ (0.29) & $2.04 \pm 0.054$ (0.33) \\
+Oceania & $2.56 \pm 0.44$ (0.28) & $1.95 \pm 0.32$ (0.33) & $2.97 \pm 0.44$ (0.34) \\\hline
+\end{tabular}
+\end{center}
+
+\medskip
+
+\begin{center}
+    \begin{tabular}{|c|c|c|c|c|c|}
+    \hline
+    System & Built-up area & GDP & Emissions \\\hline
+ASEAN & $1.26 \pm 0.049$ (0.43) & $1.23 \pm 0.041$ (0.51) & $1.75 \pm 0.067$ (0.44) \\
+MERCOSUR & $1.04 \pm 0.040$ (0.50) & $1.15 \pm 0.035$ (0.62) & $1.72 \pm 0.050$ (0.64) \\
+COMESA & $1.65 \pm 0.074$ (0.26) & $1.52 \pm 0.072$ (0.26) & $1.93 \pm 0.085$ (0.28) \\
+EEA & $0.93 \pm 0.015$ (0.84) & $1.15 \pm 0.019$ (0.83) & $1.50 \pm 0.037$ (0.69)\\\hline
+\end{tabular}
+\end{center}
+
+}
+
+
+
+
+
+\sframe{Description of models}{
+
+% increasing complexity for the presentation of models
+
+\begin{columns}
+	\begin{column}{0.33\textwidth}
+		\textbf{Network interaction model}
+		
+		\medskip
+
+		\begin{itemize}
+			\item Endogenous growth
+			\item Interactions inducing growth through gravity potential
+			\item Static physical network taken into account (geographical shortest path with topography)
+		\end{itemize}
+		
+	\end{column}
+	\vrule{}
+	\begin{column}{0.33\textwidth}
+		%\vspace{-1cm}
+		\textbf{Favaro-Pumain model}
+		
+		\medskip
+		
+		\begin{itemize}
+			\item Endogenous growth
+			\item Innovation emerge and diffuse in cities
+			\item Growth rates adapted according to utility of innovation and level of adaptation
+		\end{itemize}
+			
+	\end{column}
+	\vrule{}
+	\begin{column}{0.33\textwidth}
+		\textbf{Marius model}
+		
+		\medskip
+		
+		\begin{itemize}
+			\item Cities produce economic goods
+			\item Economic exchanges are estimated according to gravity flows
+			\item Populations grow depending on final economic balances
+		\end{itemize}
+
+		
+	\end{column}
+\end{columns}
+
+
+
+
+
+}
+
+
+
+
+\sframe{Models settings}{
+
+$\rightarrow$ Work under Gibrat independence assumptions, i.e. $\Covb{P_i(t)}{P_j(t)}=0$. If $\vec{P}(t+1)=\mathbf{R}\cdot \vec{P}(t)$ where $\mathbf{R}$ is also independent, then $\Eb{\vec{P}(t+1)}=\Eb{\mathbf{R}}\cdot\Eb{\vec{P}}(t)$. Consider expectancies only (higher moments computable similarly)
+
+\medskip
+
+$\rightarrow$ With $\vec{\mu}(t)=\Eb{\vec{P}(t)}$, we generalize this approach by taking $\vec{\mu}(t+1)=f(\vec{\mu}(t))$
+
+}
+
+
+
+\sframe{Network model}{
+
+Direct network interaction model \cite{raimbault2018indirect}:
+
+\medskip
+
+Let $\vec{\mu}(t)=\Eb{\vec{P}(t)}$ cities population and $(d_{ij})$ distance matrix
+
+\medskip
+
+Model specified by
+
+\[
+f(\vec{\mu}) = r_0\cdot \mathbf{Id}\cdot \vec{\mu} + \mathbf{G}\cdot \mathbf{1} + \mathbf{N}
+\]
+
+ with 
+\begin{itemize}
+\item $G_{ij} = w_G\cdot \frac{V_{ij}}{<V_{ij}>}$ and $V_{ij} = \left(\frac{\mu_i\mu_j}{\sum{\mu_k}^2}\right)^{\gamma_G} \exp{(-d_{ij}/d_G)}$
+\item $N_{i} = w_N \cdot \sum_{kl} \left(\frac{\mu_k\mu_l}{\sum\mu}\right)^{\gamma_N}\exp{(-d_{kl,i})/d_N}$ where $d_{kl,i}$ is distance to shortest path between $k,l$ computed with slope impedance ($Z=\left(1+\alpha/\alpha_0\right)^{n_0}$ with $\alpha_0\simeq 3$)
+\end{itemize}
+
+
+}
+
+
+\sframe{Innovation diffusion}{
+
+Favaro-Pumain model \cite{favaro2011gibrat}:
+
+\medskip
+
+1) Diffuse innovations according to 
+\[
+\delta_{c,i,t} = \frac{\sum_j p_{c,j,t-1}^{s_c} \exp{(-\lambda_s d_{ij})}}{\sum_c \sum_j p_{c,j,t-1}^{s_c} \exp{(-\lambda_s d_{ij})}}
+\]
+
+\medskip
+
+2) Update population with $G_{ij}$ (see network model) such that
+\[
+V_{ij}= \frac{p_i p_j}{(\sum_k p_k)^2} \exp{(-\lambda_m d_{ij} \prod_c \delta_{c,i}^{\phi_c})}
+\]
+with $\phi_c = \sum_i p_{i,c}/\sum_{i,c} p_{i,c}$
+
+\medskip
+
+3) Introduce innovation with utility $s_{c+1} = g_0 \cdot s_c$ in a randomly chosen city with a hierarchy parameter $\alpha_I$, if global adoption share $\phi_c$ is larger than a threshold $\theta_I$. Initial utility $s_0$ is a parameter. New innovation has an initial penetration rate $r_I$ in the city.
+
+}
+
+\sframe{Economic exchanges}{
+
+Marius model \cite{10.1371/journal.pone.0138212}:
+
+\medskip
+
+Initial wealth as a power law of population (exponent $\alpha_W$)
+
+\medskip
+
+1) Update supply and demands as superlinear functions of population (exponents $\alpha_S,\alpha_D$)
+
+\medskip
+
+2) Exchange goods according to a gravity potential of interaction (distance decay $d_M$), supplies and demands; update wealth accordingly
+
+\medskip
+
+3) Update population such that population difference is a power law of wealth difference (economic multiplier $e_M$ and exponent $\alpha_P$)
+
+}
+
+
+\sframe{Benchmarked models}{
+
+\begin{enumerate}
+	\item Gibrat model: 1 param. $r_0$
+	\item Direct interaction model (geographical distance): 4 param. $r_0,w_G,\gamma_G,d_G$
+	\item Physical network interaction model (topographical distance: 4 param. $r_0,w_G,\gamma_G,d_G$
+	\item Innovation diffusion model (simplified): 4 param. $r_0,w_I,\lambda_s,\lambda_m$ (other parameters at default values from \cite{favaro2011gibrat})
+	\item Innovation diffusion model (full): 9 param. $r_0,w_I,\lambda_s,\lambda_m,s_0,g_0,r_I,\alpha_I,\theta_I$
+	\item Restricted Marius model: 4 param. $e_M,\alpha_S,\alpha_D,d_M$
+	\item Marius model: 6 param. $e_M,\alpha_S,\alpha_D,d_M,\alpha_W,\alpha_P$
+\end{enumerate}
+
+}
+
+
+
+
 
 
 
@@ -186,9 +763,6 @@ Generalizing existing studies
 \bibliography{biblio}
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
-
 
 
 
